--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
       </div>
 
       <!-- Masthead Subheading -->
-      <p class="masthead-subheading font-weight-light mb-0">Excited to share you my portfolio with 2 + years in IT</p>
+      <p class="masthead-subheading font-weight-light mb-0">Excited to share you my portfolio with 4 + years in IT</p>
 
     </div>
   </header>
@@ -189,12 +189,14 @@
         <div class="col-lg-4 ml-auto">
           <p class="lead">
               I love to learn new things as it triggers my inner joyfulness to seek and learn more, from sketching it out to a paper and bringing that into real output which makes people fall in love with.
-
-              Currently working as a System Engineer with a demonstrated history of working in the information technology and services industry. to manage client operations and solutions Europe Government healthcare clients (NHS trust)
+              
+              <p class="lead">Currently working as Quality Engineer with Devops methodology using latest tools to maintain the CI\CD pipelines with automating test cases using RPA, also providing eye sight to developers to review code and run it on our deployements.</p>
+            </div>
+              Preivously worked as a System Engineer with a demonstrated history of working in the information technology and services industry. to manage client operations and solutions Europe Government healthcare clients (NHS trust)
               Roles & responsibility - Operations, Configuration tools to manager solutions, analyzing data, handling client data centers, requirement analysis, development and design.</p>
         </div>
         <div class="col-lg-4 mr-auto">
-          <p class="lead">I fell in love with Devops in process of finding new tools to automate, that's when the passion for it started, I like to write script on Powershell Core , Python and shell sometimes. I get hunger when there are new techs that I want to learn, I believe in quote "Learning never stops" </p>
+          <p class="lead">I fell in love with Devops in process of finding new tools to automate, that's when the passion for it started, I like to write script on Powershell Core , Csharp, Java, Python and shell sometimes, I get hunger when there are new techs that I want to learn, I believe in quote "Learning never stops" </p>
           <p class="lead"> Please feel free to download my resume :) </p>
         </div>
       </div>
